--- a/Python_para_Data_Science.ipynb
+++ b/Python_para_Data_Science.ipynb
@@ -1895,7 +1895,7 @@
       "metadata": {
         "id": "J_atQRQdlpNe"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -2447,64 +2447,26 @@
       "metadata": {
         "id": "UvVbXY0XVm-f"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "try:\n",
-        "  nombre = input('Ingrese el nombre del estudiante')\n",
-        "  resultado = notas[nombre]\n",
-        "except Exception as e:\n",
-        "  print(type(e), e)\n"
-      ],
+      "source": [],
       "metadata": {
-        "id": "rFBq02dbJtkF",
-        "outputId": "1cb2fa04-f92b-4772-a74f-fa71702cb157",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "rFBq02dbJtkF"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Ingrese el nombre del estudianteMike\n",
-            "<class 'KeyError'> 'Mike'\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "try:\n",
-        "  nombre = input('Ingrese el nombre del estudiante: ')\n",
-        "  resultado = notas[nombre]\n",
-        "except KeyError:\n",
-        "  print('Estudiante no matriculado en el grupo')"
-      ],
+      "source": [],
       "metadata": {
-        "id": "IZwxTL1EJvRl",
-        "outputId": "93b555b7-81fd-4a2d-997f-365334f22006",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "IZwxTL1EJvRl"
       },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Ingrese el nombre del estudiante: Mike\n",
-            "Estudiante no matriculado en el grupo\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2543,33 +2505,21 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "try:\n",
-        "  nombre = input('Ingrese el nombre del estudiante: ')\n",
-        "  resultado = notas[nombre]\n",
-        "except KeyError:\n",
-        "  print('Estudiante no matriculado en el grupo')\n",
-        "else:\n",
-        "  print(f'Las notas de {nombre} son {resultado}')"
-      ],
+      "source": [],
       "metadata": {
-        "id": "Qr_4-D3UJxcE",
-        "outputId": "58906af8-c6fc-4769-fdd8-68a1b8cf9db7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Qr_4-D3UJxcE"
       },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Ingrese el nombre del estudiante: Maria\n",
-            "Las notas de Maria son [9.0, 7.0, 6.0]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "uy2xPGXoJzXS"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2611,36 +2561,21 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "try:\n",
-        "  nombre = input('Ingrese el nombre del estudiante: ')\n",
-        "  resultado = notas[nombre]\n",
-        "except KeyError:\n",
-        "  print(f'El estudiante {nombre} no esta matriculado en el grupo')\n",
-        "else:\n",
-        "  print(f'Las notas de {nombre} son {resultado}')\n",
-        "finally:\n",
-        "  print('La consulta ha concluido')"
-      ],
+      "source": [],
       "metadata": {
-        "id": "PwdLYP_zJ04s",
-        "outputId": "d2f90549-1870-4a1a-c765-74ce7ba8c0b3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "PwdLYP_zJ04s"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Ingrese el nombre del estudiante: Maria\n",
-            "Las notas de Maria son [9.0, 7.0, 6.0]\n",
-            "La consulta ha concluido\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pv0BaQ95J1BA"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2706,35 +2641,178 @@
       "metadata": {
         "id": "kKeFuHUfhSfa"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def promedio(lista: list=[0]) -> float:\n",
+        "  ''' Función para calcular el promedio de notas en una lista\n",
+        "\n",
+        "  lista: list, default [0]\n",
+        "    Lista con las notas para calcular el promedio\n",
+        "  return = calculo: float\n",
+        "    Promedio calculado\n",
+        "  '''\n",
+        "\n",
+        "  calculo = sum(lista) / len(lista)\n",
+        "\n",
+        "  if len(lista) > 4:\n",
+        "    raise ValueError('La lista no puede poseer más de 4 notas.')\n",
+        "\n",
+        "  return calculo\n",
+        "\n",
+        "notas = [6, 7, 8, 9, 10]\n",
+        "resultado = promedio(notas)\n",
+        "resultado"
+      ],
       "metadata": {
-        "id": "_ghW6hb9KBpU"
+        "id": "_ghW6hb9KBpU",
+        "outputId": "a5c34b92-c2da-46c6-d2cd-3c0343919209",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 323
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "La lista no puede poseer más de 4 notas.",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-41a8e02fd4f2>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mnotas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mresultado\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpromedio\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnotas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0mresultado\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-4-41a8e02fd4f2>\u001b[0m in \u001b[0;36mpromedio\u001b[0;34m(lista)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlista\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'La lista no puede poseer más de 4 notas.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mcalculo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: La lista no puede poseer más de 4 notas."
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "try:\n",
+        "  notas = [6, 7, 8, 9, 7, '10']\n",
+        "  resultado = promedio(notas)\n",
+        "except TypeError:\n",
+        "  print('No fue posible calcular el promedio del(la) estudiante. Solo se admiten valores numéricos!')\n",
+        "except ValueError as e:\n",
+        "  print(e)\n",
+        "else:\n",
+        "  print(f'Las notas del estudiante son: {resultado}')\n",
+        "finally:\n",
+        "  print('La consulta ha concluido')"
+      ],
       "metadata": {
-        "id": "X2To8kJdKGFk"
+        "id": "X2To8kJdKGFk",
+        "outputId": "f664cdb7-7b1b-452d-8e69-155276b75006",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "No fue posible calcular el promedio del(la) estudiante. Solo se admiten valores numéricos!\n",
+            "La consulta ha concluido\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "try:\n",
+        "  notas = [6, 7, 8, 9, 7, '10']\n",
+        "  resultado = promedio(notas)\n",
+        "except ValueError as e:\n",
+        "  print(e)\n",
+        "except TypeError:\n",
+        "  print('No fue posible calcular el promedio del(la) estudiante. Solo se admiten valores numéricos!')\n",
+        "else:\n",
+        "  print(f'Las notas del estudiante son: {resultado}')\n",
+        "finally:\n",
+        "  print('La consulta ha concluido')"
+      ],
       "metadata": {
         "id": "nrCsWqX6KGIA"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "  notas = [6, 7, 8, 9, 7]\n",
+        "  resultado = promedio(notas)\n",
+        "except ValueError as e:\n",
+        "  print(e)\n",
+        "except TypeError:\n",
+        "  print('No fue posible calcular el promedio del(la) estudiante. Solo se admiten valores numéricos!')\n",
+        "else:\n",
+        "  print(f'Las notas del estudiante son: {resultado}')\n",
+        "finally:\n",
+        "  print('La consulta ha concluido')"
+      ],
+      "metadata": {
+        "id": "IU_uPDocdMkh",
+        "outputId": "9a1bd81d-c41d-49ca-a6f0-6d26898dd58a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La lista no puede poseer más de 4 notas.\n",
+            "La consulta ha concluido\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "  notas = [6, 7, 8, 9]\n",
+        "  resultado = promedio(notas)\n",
+        "except ValueError as e:\n",
+        "  print(e)\n",
+        "except TypeError:\n",
+        "  print('No fue posible calcular el promedio del(la) estudiante. Solo se admiten valores numéricos!')\n",
+        "else:\n",
+        "  print(f'Las notas del estudiante son: {resultado}')\n",
+        "finally:\n",
+        "  print('La consulta ha concluido')"
+      ],
+      "metadata": {
+        "id": "ufDrBvOwdO8V",
+        "outputId": "167f83f0-3314-4971-bc8d-2c4626049498",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Las notas del estudiante son: 7.5\n",
+            "La consulta ha concluido\n"
+          ]
+        }
+      ]
     }
   ]
 }
